# spatial-density-filter

./: CMakeLists.txt  README.md
data/: input.off  output.off
src/: main.cpp
